# MLP-MNIST

./: .gitignore  CMakeLists.txt  README.md  graphic.py  image_txt.py  input.txt  main.cpp  main_conv2d.cpp  main_test.cpp  main_train.cpp  output_conv.txt  test.py  txt_image.py
config/: initial.txt  mnist.txt  mnist_3.txt
database/: XOR.txt
include/: activation.hpp  activations.hpp  config.hpp  conv2d.hpp  dataset.hpp  dropout.hpp  flatten.hpp  layer.hpp  mlp.hpp  neuron.hpp  optimizer.hpp  pooling.hpp  regularizer.hpp
src/: config.cpp  conv2d.cpp  dataset.cpp  flatten.cpp  layer.cpp  mlp.cpp  neuron.cpp  pooling.cpp  regularizer.cpp
test/mnist45/: labels.txt
